--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
     <link rel="icon" type="image/svg+xml" href="/images/s-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sumeet's Portfolio</title>
+    <style>
+      /* Hide scrollbar but allow scrolling */
+      html, body {
+        scrollbar-width: none; /* Firefox */
+      }
+      body::-webkit-scrollbar {
+        display: none; /* Chrome, Safari, Edge */
+      }
+    </style>
   </head>
   <body style="background-color:#2c2523">
-    <div id="root" ></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+
+    <script>
+      // Ensure scrollbar is hidden dynamically
+      document.documentElement.style.scrollbarWidth = "none"; // Firefox
+      document.body.style.scrollbarWidth = "none"; // Firefox
+      document.body.style.overflowY = "scroll"; // Allow scrolling but hide scrollbar
+      document.body.style.msOverflowStyle = "none"; // IE/Edge
+      document.body.style.webkitOverflowScrolling = "touch"; // Smooth scrolling for mobile
+    </script>
   </body>
 </html>
